--- a/mobile/src/main/res/layout/activity_my.xml
+++ b/mobile/src/main/res/layout/activity_my.xml
@@ -8,9 +8,44 @@
     android:paddingBottom="@dimen/activity_vertical_margin"
     tools:context=".MyActivity">
 
-    <TextView
-        android:text="@string/hello_world"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+    <LinearLayout
+        android:orientation="vertical"
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true"
+        android:weightSum="1">
+
+        <EditText
+            android:layout_width="match_parent"
+            android:layout_height="100dp"
+            android:inputType="number"
+            android:ems="10"
+            android:id="@+id/editTextNum1"
+            android:layout_gravity="center_horizontal" />
+
+        <EditText
+            android:layout_width="match_parent"
+            android:layout_height="100dp"
+            android:inputType="number"
+            android:ems="10"
+            android:id="@+id/editTextNum2" />
+
+        <Button
+            android:layout_width="match_parent"
+            android:layout_height="50dp"
+            android:text="OK"
+            android:id="@+id/buttonOK"
+            android:layout_weight="0.02"
+            android:padding="10dp"/>
+
+        <Button
+            android:layout_width="match_parent"
+            android:layout_height="50dp"
+            android:text="Cancel"
+            android:id="@+id/buttonCancel"
+            android:layout_gravity="right" />
+
+    </LinearLayout>
 
 </RelativeLayout>
