--- a/wear/src/main/res/layout/activity_my.xml
+++ b/wear/src/main/res/layout/activity_my.xml
@@ -8,6 +8,6 @@
     android:layout_height="match_parent"
     app:rectLayout="@layout/rect_activity_my"
     app:roundLayout="@layout/round_activity_my"
-    tools:context=".MyActivity"
+    tools:context=".NotificationActivity"
     tools:deviceIds="wear">
 </android.support.wearable.view.WatchViewStub>
